--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,11 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+  fonts:
+    - family: Oswald
+      fonts:
+        - asset: assets/font/Oswald-Bold.ttf
+          weight: 700
   # fonts:
   #   - family: Schyler
   #     fonts:
